wrapped the text in textui tabs so they are legible. fixes #1070

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -231,6 +231,7 @@ ul#view-header li {
 
 #left-column ul#societies li {
     margin:0px;
+    width: 160px;
 }
 
 #left-column ul li.all {
